# sstu

./: Dockerfile  README.md  app.py  docker-compose.yaml  makefile  polynoms.py  pyproject.toml
static/: script.js  style.css
templates/: index.html
