[project]
name = "sstu_differential_equations_app"
version = "0.1.0"
description = "Flask application for solving and visualizing a system of differential equations with polynomial checks."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Flask",
    "Flask-CORS",
    "matplotlib",
    "numpy",
    "scipy",
    "gunicorn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"